.k8s/apps/immich.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: immich
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: server
    app.kubernetes.io/version: v2.0.0
    helm.sh/chart: immich-0.10.3
    kubenix/hash: 541c9fea1bbcf202fc1ae3bf545750c602a53c4c
  name: immich-server
  namespace: apps
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: a22e67ebc948c74d66dfb7eb0842ea0550621b95b9f9b8d1833aacabc5258ac1
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: immich
        app.kubernetes.io/name: server
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: IMMICH_CONFIG_FILE
              value: /config/immich-config.yaml
            - name: IMMICH_MACHINE_LEARNING_URL
              value: http://immich-machine-learning:3003
            - name: IMMICH_TELEMETRY_INCLUDE
              value: all
            - name: REDIS_HOSTNAME
              value: immich-valkey
          image: ghcr.io/immich-app/immich-server:v3.3.0@sha256:be56bc12c17a84617a979ad1eab1d9105bbec1955ffa7da09b3f9cf79d3bd09d
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          name: main
          ports:
            - containerPort: 2283
              name: http
              protocol: TCP
            - containerPort: 8081
              name: metrics-api
              protocol: TCP
            - containerPort: 8082
              name: metrics-ms
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 512Mi
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      priorityClassName: preemptible
      serviceAccountName: default
      volumes:
        - configMap:
            name: immich-immich-config
          name: config
        - name: data
          persistentVolumeClaim:
            claimName: cephfs-shared-storage-root
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.108
    lbipam.cilium.io/sharing-key: immich
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: server
    app.kubernetes.io/service: immich-server
    app.kubernetes.io/version: v2.0.0
    helm.sh/chart: immich-0.10.3
    kubenix/hash: 541c9fea1bbcf202fc1ae3bf545750c602a53c4c
  name: immich-server
  namespace: apps
spec:
  ports:
    - name: http
      port: 2283
      protocol: TCP
      targetPort: http
    - name: metrics-api
      port: 8081
      protocol: TCP
      targetPort: metrics-api
    - name: metrics-ms
      port: 8082
      protocol: TCP
      targetPort: metrics-ms
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: server
    app.kubernetes.io/version: v2.0.0
    helm.sh/chart: immich-0.10.3
    kubenix/hash: 541c9fea1bbcf202fc1ae3bf545750c602a53c4c
  name: immich-server
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: immich.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: immich-server
                port:
                  number: 2283
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - immich.josevictor.me
      secretName: wildcard-tls
